# python-dpcpp-extension-sample-code

./: CMakeLists.txt  README.md  build.sh  dpcpp_module.cpp  test.py
